--- a/PropertyQuest/propertyquest.client/src/app/nav-menu/nav-menu.component.scss
+++ b/PropertyQuest/propertyquest.client/src/app/nav-menu/nav-menu.component.scss
@@ -22,17 +22,9 @@
   align-items: center; // Aligns child elements vertically in the center
 }
 
-.home p {
-  margin: 0;
-  display: inline;
-  color: rgb(0,21,36);
-  font-size: 25px;
-  font-weight: 700;
-}
-
 .home-icon {
-  width: 60px;
-  height: 60px;
+  width: 250px;
+  height: 75px;
   margin-right: 8px;
 }
 
